--- a/1405.3483/1405.3483.tex
+++ b/1405.3483/1405.3483.tex
@@ -1,7 +1,26 @@
- \documentstyle[11pt]{article}
+ \documentclass[12pt]{article}
 \def\fnote#1#2{\begingroup\def\thefootnote{#1}\footnote{#2}\addtocounter
 {footnote}{-1}\endgroup}
 \def\BM#1{\mbox{\boldmath{$#1$}}}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 \begin{document}
 
@@ -39,19 +58,19 @@ It is proposed to give up the description of physical states in terms of ensembl
 
 \pagebreak
 
-
+\pdfbookmark{A MODEST PROPOSAL}{I}
 \begin{center}
 {\bf I. A MODEST PROPOSAL}
 \end{center}
 
 
-Two unsatisfactory features of quantum mechanics  have bothered physicists for decades.  The first is the difficulty of dealing with measurement.   The unitary deterministic evolution of the state vector in quantum mechanics cannot convert a definite initial state vector to an ensemble of eigenvectors of the measured quantity with various probabilities.  Here we seem to be faced with nothing but bad choices.  The Copenhagen interpretation[1] assumes  a mysterious division between the microscopic world governed by quantum mechanics and a macroscopic world of apparatus and observers that obeys classical physics.  If instead we take the wave function or state vector seriously as a description of reality, and suppose that it evolves unitarily according to the deterministic time-dependent Schr\"{o}dinger equation, we are inevitably led to a many-worlds interpretation[2], in which all possible results of any measurement are realized.     To avoid both the absurd dualism of the Copenhagen interpretation and   the endless creation of inconceivably many branches of history of the many-worlds approach, some physicists adopt an instrumentalist position, giving  up on any realistic interpretation of the wave function, and regarding it as only a source of predictions of probabilities, as in the decoherent histories approach[3].
+Two unsatisfactory features of quantum mechanics  have bothered physicists for decades.  The first is the difficulty of dealing with measurement.   The unitary deterministic evolution of the state vector in quantum mechanics cannot convert a definite initial state vector to an ensemble of eigenvectors of the measured quantity with various probabilities.  Here we seem to be faced with nothing but bad choices.  The Copenhagen interpretation [1] assumes  a mysterious division between the microscopic world governed by quantum mechanics and a macroscopic world of apparatus and observers that obeys classical physics.  If instead we take the wave function or state vector seriously as a description of reality, and suppose that it evolves unitarily according to the deterministic time-dependent Schr\"{o}dinger equation, we are inevitably led to a many-worlds interpretation [2], in which all possible results of any measurement are realized.     To avoid both the absurd dualism of the Copenhagen interpretation and   the endless creation of inconceivably many branches of history of the many-worlds approach, some physicists adopt an instrumentalist position, giving  up on any realistic interpretation of the wave function, and regarding it as only a source of predictions of probabilities, as in the decoherent histories approach [3].
 
-The other problem with quantum mechanics arises from entanglement[4].  In an entangled state in ordinary quantum mechanics  an intervention in the state vector affecting one part of a system can instantaneously affect the state vector  describing a distant isolated part of the system.  It is true that in ordinary quantum mechanics no measurement in one subsystem can reveal what measurement was done in a different isolated subsystem, but  the susceptibility of the state vector  to instantaneous change from a distance  casts doubts on its physical significance.  
+The other problem with quantum mechanics arises from entanglement [4].  In an entangled state in ordinary quantum mechanics  an intervention in the state vector affecting one part of a system can instantaneously affect the state vector  describing a distant isolated part of the system.  It is true that in ordinary quantum mechanics no measurement in one subsystem can reveal what measurement was done in a different isolated subsystem, but  the susceptibility of the state vector  to instantaneous change from a distance  casts doubts on its physical significance.  
 
-Entanglement is much more of a problem in some modifications of quantum mechanics that are intended to resolve the problem of measurement, such as  the general nonlinear stochastic evolution studied in [5].  It is difficult in these theories even to formulate what we mean by isolated subsystems, much less to prevent instantaneous communication between them[6,7].  Polchinski[7] has shown that unless nonlinearities are constrained to depend only on the density matrix,   such modified versions of quantum mechanics even allow communication between the different worlds of the many-worlds description of quantum mechanics.
+Entanglement is much more of a problem in some modifications of quantum mechanics that are intended to resolve the problem of measurement, such as  the general nonlinear stochastic evolution studied in [5].  It is difficult in these theories even to formulate what we mean by isolated subsystems, much less to prevent instantaneous communication between them [6,7].  Polchinski [7] has shown that unless nonlinearities are constrained to depend only on the density matrix,   such modified versions of quantum mechanics even allow communication between the different worlds of the many-worlds description of quantum mechanics.
 
-The problem of instantaneous communication between distant isolated systems has been nicely summarized in a theorem of Gisin[6].  It states that in a system consisting of two  isolated subsystems {\em I} and {\em II}, with a prescribed density matrix $\rho^I$ for subsystem ${\em I}$, it is always possible in a suitable entangled state of the two subsystems to make measurements on subsystem $II$ that put subsystem ${\em I}$ in {\em any} set of states $\Psi^I_r$ (not  necessarily orthogonal) with probabilities $P_r$, provided only that $\sum_r P_r
+The problem of instantaneous communication between distant isolated systems has been nicely summarized in a theorem of Gisin [6].  It states that in a system consisting of two  isolated subsystems {\em I} and {\em II}, with a prescribed density matrix $\rho^I$ for subsystem ${\hbox{\em I}}$, it is always possible in a suitable entangled state of the two subsystems to make measurements on subsystem $II$ that put subsystem ${\hbox{\em I}}$ in {\hbox{\em any}} set of states $\Psi^I_r$ (not  necessarily orthogonal) with probabilities $P_r$, provided only that $\sum_r P_r
 \Lambda^I_r=\rho^I$, where $\Lambda^I_r$ is the projection operator on the state  $\Psi^I_r$.    
 
 Since any statement that a system is in an ensemble of states with definite probabilities can thus be changed instantaneously by a measurement at an arbitrary distance, keeping only the density matrix fixed, it seems reasonable to infer that such statements are meaningless, and that only the density matrix has meaning.  That is, it  seems  worth considering yet another interpretation of quantum mechanics:  The density matrix rather than the state vector or wave function  is to be taken as a description of reality.  
@@ -77,7 +96,7 @@ $$\rho=\left(\begin{array}{ccc}a_1 & b_3 & b_2^* \\ b_3^* & a_2 & b_1 \\ b_2 & b
 where  under $SU(3)$ the real diagonal elements $a_n$ transform as singlets, with $a_1+a_2+a_3=1$, and the triplet $(b_1,b_2,b_3)$ transforms as the representation ${\BM 3}$.
 This $SU(3)$ transformation of $\rho$  cannot be put in the form $\rho\mapsto U\rho U^\dagger$ required in ordinary quantum mechanics, because if the $3\times 3$ matrix $U$  belonged to the representations ${\BM 3}$ or $\overline{\BM 3}$ then $\rho$ would transform as  ${\BM 3}\times\overline{\BM 3}= {\BM 1}+{\BM 8}$, not ${\BM 3}+\overline{\BM 3}+{\BM 1}+{\BM 1}+{\BM 1}$.  (The other possibility is that $U$  belongs to the representation ${\BM 1}+{\BM 1}+{\BM 1}$, in which case $\rho$ would transform as a sum of singlets, again not including ${\BM 3}+\overline{\BM 3}$.)  The question of the positivity of a density matrix transforming in this way is discussed in Section VII.
 
-The possibility of an unusual transformation of the density matrix has been widely considered, but up to now I believe only for the symmetry of time-translation.  In this case it is known that the evolution of the density matrix with time is in general governed by a first-order linear differential equation, such as the Lindblad equation[8] (given here in Section VIII), different from what is found in ordinary quantum mechanics.  The Lindblad equation is commonly used to study open systems in ordinary quantum mechanics, with the effects of the environment integrated out, but it has also been  used to deal with the problem of measurement[9] in closed systems.  A stochastic evolution of the state vector can be arranged to yield a Lindblad equation for the density matrix, and with a  suitable choice of the details of this differential equation, its solutions can reproduce the results of measurement according to the Copenhagen interpretation, but through a smooth spontaneous localization of the density matrix[9] rather than a sudden intrusion of classical physics.  (These matters are discussed in a separate paper[10].)  These theories share the well-known feature of ordinary quantum mechanics, that entanglement does not lead to communication at a distance between isolated systems.  This is because (as explained below, in a more general context) nothing that is done in one system can instantaneously affect the density matrix of another system, though it can affect the state vector; also, all predictions can be derived from the density matrix, without knowing anything about state vectors, and the evolution of the density matrix depends only on the density matrix, not on the state vector.  But from the point of view explored in the present work, the study of the stochastic evolution of the state vector is unnecessary; it is only the differential equation for the density matrix that matters.  
+The possibility of an unusual transformation of the density matrix has been widely considered, but up to now I believe only for the symmetry of time-translation.  In this case it is known that the evolution of the density matrix with time is in general governed by a first-order linear differential equation, such as the Lindblad equation [8] (given here in Section VIII), different from what is found in ordinary quantum mechanics.  The Lindblad equation is commonly used to study open systems in ordinary quantum mechanics, with the effects of the environment integrated out, but it has also been  used to deal with the problem of measurement [9] in closed systems.  A stochastic evolution of the state vector can be arranged to yield a Lindblad equation for the density matrix, and with a  suitable choice of the details of this differential equation, its solutions can reproduce the results of measurement according to the Copenhagen interpretation, but through a smooth spontaneous localization of the density matrix [9] rather than a sudden intrusion of classical physics.  (These matters are discussed in a separate paper [10].)  These theories share the well-known feature of ordinary quantum mechanics, that entanglement does not lead to communication at a distance between isolated systems.  This is because (as explained below, in a more general context) nothing that is done in one system can instantaneously affect the density matrix of another system, though it can affect the state vector; also, all predictions can be derived from the density matrix, without knowing anything about state vectors, and the evolution of the density matrix depends only on the density matrix, not on the state vector.  But from the point of view explored in the present work, the study of the stochastic evolution of the state vector is unnecessary; it is only the differential equation for the density matrix that matters.  
 
 
 
@@ -85,6 +104,7 @@ The time-translation symmetry transformations used in deriving the Lindblad equa
 
 \vspace{20pt}
 
+\pdfbookmark{PHYSICAL QUANTITIES AND UNUSUAL SYMMETRIES}{II}
 \begin{center}
 {\bf II. PHYSICAL QUANTITIES AND UNUSUAL SYMMETRIES}
 \end{center}
@@ -99,7 +119,7 @@ We will take a symmetry transformation to be a linear mapping $\rho\mapsto g(\rh
 
 With this definition of symmetry transformations, it is important to decide just what operators can represent physical quantities.  Certainly we want to include familiar quantities like momentum, angular momentum, etc. and functions of these quantities.  In particular, the projection operator on a non-degenerate eigenstate of such a physical quantity, as for instance the projection operator $(1\pm2s_z)/2$ on a state of a spin $1/2$ with $s_z=\pm 1/2$, represents a physical quantity.   In ordinary quantum mechanics, {\em any} Hermitian operator is assumed to represent a physical quantity, but if state vectors are not to be taken as a representation of reality, we can doubt whether  operators $\Lambda_\Psi$  that are defined  as the projection operators on arbitrary state-vectors $\Psi$  necessarily represent   physical quantities.  If they did, then according to our interpretive postulate ${\rm Tr}(\Lambda_\Psi\,\rho)$ would be the probability that a system with density matrix $\rho$ is in a state $\Psi$, which is just the sort of statement that we are taking as generally meaningless.  In any case, it is hard to see how one could ever tell that Schr\"{o}dinger's cat is in a state $|alive>+|dead>$ rather than, say, $|alive>-|dead>$.  
 
-This point is important for us,  because  if all Hermitian operators including projection operators represent physical quantities, then with our assumptions it can be shown that density matrices transform under any symmetry transformation $g$ with an inverse just as in ordinary quantum mechanics[11]:
+This point is important for us,  because  if all Hermitian operators including projection operators represent physical quantities, then with our assumptions it can be shown that density matrices transform under any symmetry transformation $g$ with an inverse just as in ordinary quantum mechanics [11]:
 \begin{equation}
  g(\rho)=U\,\rho\,U^\dagger\;,
 \end{equation}
@@ -120,7 +140,7 @@ The rest of the proof is completed quickly. Any projection operator $\Lambda$ ca
 $${\rm Tr}\Big(\Lambda_{g(\Psi)}\,\Lambda_{g(\Phi)}\Big)={\rm Tr}\Big(\Lambda_\Psi\,\Lambda_\Phi\Big)$$
  and therefore
 $$\left|\Big(g(\Psi),g(\Phi)\Big)\right|^2=\left|\Big(\Psi,\Phi\Big)\right|^2\;.$$
-According to Wigner's theorem[12], if this condition is satisfied for all normalized state vectors $\Phi$ and $\Psi$, then it must be possible to choose the phases of all $g(\Psi)$  so that,
+According to Wigner's theorem [12], if this condition is satisfied for all normalized state vectors $\Phi$ and $\Psi$, then it must be possible to choose the phases of all $g(\Psi)$  so that,
 $$ g(\Psi)=U_g\Psi$$
 where $U_g$ is a unitary (or antiunitary) operator, the same for all $\Psi$.  In this case, we have $g(\Lambda_\Psi)=U_g \Lambda_\Psi U_g^\dagger$.  Since any density matrix can be expressed (though not uniquely) as a linear combination of projection operators, they also transform as in Eq.~(2), as was to be proved.
 
@@ -134,6 +154,7 @@ The behavior  of the density matrix under general symmetry transformations is ou
 
 \vspace{20pt}
 
+\pdfbookmark{GENERAL SYMMETRIES}{III}
 \begin{center}
 {\bf III. GENERAL SYMMETRIES}
 \end{center}
@@ -144,7 +165,7 @@ We suppose that a general element $g$ of the symmetry group of a system induces 
 g(\rho)_{M'N'}=\sum_{MN}K_{M'M,N'N}[g]\,\rho_{MN}\;,
 \end{equation}
 where $K[g]$ is some c-number kernel independent of $\rho$.  
-We will take the indices $M$, $N$, etc. to run here over a finite number $d$ of values, but will assume that the formalism can be extended to Hilbert spaces of infinite dimensionality, on which the matrices considered here become well-behaved operators.   (No attempt will be made here to apply this formalism to relativistic  theories[13].)  Our reason for concentrating on linear transformations is explained later in this section.
+We will take the indices $M$, $N$, etc. to run here over a finite number $d$ of values, but will assume that the formalism can be extended to Hilbert spaces of infinite dimensionality, on which the matrices considered here become well-behaved operators.   (No attempt will be made here to apply this formalism to relativistic  theories [13].)  Our reason for concentrating on linear transformations is explained later in this section.
 
 In order for $g(\rho)$ to be Hermitian for an arbitrary Hermitian $\rho$, it is necessary and sufficient that $K$ be Hermitian, in the sense that
  \begin{equation}
@@ -235,6 +256,7 @@ In the next section we will explore the implications of Eq.~(17) for continuous 
 
 \vspace{20pt}
 
+\pdfbookmark{CONTINUOUS SYMMETRIES}{IV}
 \begin{center}
 {\bf IV. CONTINUOUS SYMMETRIES}
 \end{center}
@@ -336,6 +358,7 @@ But these familiar results do not hold if the density matrix transforms in a mor
 
 
 \vspace{20pt}
+\pdfbookmark{AN EXAMPLE}{V}
 
 \begin{center}
 {\bf V. AN EXAMPLE}
@@ -353,10 +376,12 @@ The transformation (30) then reads
 &&\delta_{\epsilon n}\rho_{MN}=\epsilon\Bigg[in\cdot(T_{M}-T_{N})+\sum_\alpha \Delta^{(\alpha)}(n)\Big[u_{\alpha M}(n)\,u_{\alpha N}(n)^*
 \\&&~~~~~~-\frac{1}{2}|u_{\alpha M}(n)|^2-\frac{1}{2}|u_{\alpha N}(n)|^2\Big]\Bigg]\rho_{MN}\;,
 \end{eqnarray*}
-so that $\rho_{MN}$ is not simply multiplied by a difference $f(M)-f(N)$ for some function $f$, as in ordinary quantum mechanics.  In the absence of any other symmetries the parameters $\Delta^{(\alpha)}(n)$, $n\cdot T_{M}$, and $u_{\alpha M}(n)$ would be  unconstrained, except that $\Delta^{(\alpha)}(n)$ and $T_{M}$ are real.
+so that $\rho_{MN}$ is not simply multiplied by a difference $f(M)-f(N)$ for some function $f$, as in ordinary quantum mechanics.  In the absence of any other symmetries the parameters $\Delta^{(\alpha)}(n)$, $n\cdot T_{M}$, and $u_{\alpha M}(n)$ would be  unconstrained, except that $\Delta^{(\alpha)}(n)$ and $T_{
+M}$ are real.
 
 \vspace{20pt}
 
+\pdfbookmark{COMPACT GROUPS}{VI}
 \begin{center}
 {\bf VI. COMPACT GROUPS}
 \end{center}
@@ -393,6 +418,7 @@ The trace of this equation gives $2d{\rm Tr}(n\cdot \theta)=0$, so $n\cdot \thet
 \tau_r=T_r\;.
 \end{equation}
 
+\pdfbookmark{COMPACT GROUPS}{VII}
 
 \begin{center}
 {\bf VII. POSITIVITY}
@@ -433,12 +459,13 @@ Now we can use some of the properties of the $u^{(\alpha)}(n)$ obtained in Secti
 This theorem leaves open the possibility of limiting the density matrix to a special class of positive Hermitian matrices, for which  any symmetry transformation takes any member of this class into another positive member of the same class, as in the $SU(3)$ example given above.  But does such a special class always exist?  Apparently it does, at least for compact groups.  We saw in the previous section that in a suitable basis, such symmetries leave invariant the positive density matrix ${\BM 1}/d$.  Suppose we shift this density matrix by some traceless Hermitian matrix $\eta$.  The new density matrix  ${\BM 1}/d+\eta$ will generally not  be invariant, but  as long as $\eta$ is sufficiently small the symmetry transformations  belonging to a compact group will take ${\BM 1}/d+\eta$ into  density matrices whose eigenvalues are sufficiently close to the original eigenvalues $1/d$ so that they are still all positive.  Thus,  acting  on a density matrix  ${\BM 1}/d+\eta$ with all symmetries $g$ belonging to a compact group, and with $\eta$  running over all traceless Hermitian matrices that are   sufficiently small so that all $g({\BM 1}/d+\eta)$  are positive, provides the sort of special class of density matrices we need, which can transform in a way that is different from the transformation (2) of   ordinary quantum mechanics without raising problems with positivity.
 
 \vspace{20pt}
+\pdfbookmark{MAPPINGS WITH POSITIVE EIGENVALUES}{VIII}
 
 \begin{center}
 {\bf VIII.  MAPPINGS WITH POSITIVE EIGENVALUES}
 \end{center}
 
-There is a class of mappings that are obviously positive, in the sense of taking all positive Hermitian matrices into positive Hermitian matrices.  Inspection of Eq.~(13)  shows immediately that a mapping is positive if (though not only if) all its eigenvalues $\eta^{(i)}$ are positive.  In this case, we can write the general mapping (13) in the Kraus form[15]:
+There is a class of mappings that are obviously positive, in the sense of taking all positive Hermitian matrices into positive Hermitian matrices.  Inspection of Eq.~(13)  shows immediately that a mapping is positive if (though not only if) all its eigenvalues $\eta^{(i)}$ are positive.  In this case, we can write the general mapping (13) in the Kraus form [15]:
 \begin{equation}
 g(\rho)=\sum_i A^{(i)}[g]\,\rho\,A^{(i)\dagger}[g]
 \end{equation}
@@ -511,7 +538,7 @@ basis vectors of ${\cal S}^{(II)}$ with indices $a$, $b$, etc.,
 \begin{equation}
 K_{m'a'ma,n'b'nb}=K^{(I)}_{m'm,n'n}\delta_{a'a}\delta_{b'b}\;.
 \end{equation}
-The original mapping $K^{(I)}$ is said to be {\em completely positive}[16] if $K$ is positive (in the sense of mapping all positive density matrices for the combined system into positive density matrices) for all finite dimensionalities $d_{II}$.  A theorem due to Choi[17] states that if $K^{(I)}$ is completely positive in this sense, then all its eigenvalues are positive.  (As usually stated, the theorem says that any completely positive mapping takes the Kraus form (43), but as we have seen this form follows from the positivity of the eigenvalues, and it is obvious that any kernel that induces a transformation of this form has only positive eigenvalues.)
+The original mapping $K^{(I)}$ is said to be {\em completely positive} [16] if $K$ is positive (in the sense of mapping all positive density matrices for the combined system into positive density matrices) for all finite dimensionalities $d_{II}$.  A theorem due to Choi [17] states that if $K^{(I)}$ is completely positive in this sense, then all its eigenvalues are positive.  (As usually stated, the theorem says that any completely positive mapping takes the Kraus form (43), but as we have seen this form follows from the positivity of the eigenvalues, and it is obvious that any kernel that induces a transformation of this form has only positive eigenvalues.)
 
 Though there is no doubt of the mathematical correctness of the Choi theorem,  it is not clear that it is relevant physically.  In particular, the vacuum is the only physical system that is invariant under Galilean (or Lorentz) transformations and time translations.  Since the dimensionality of the Hilbert space of the vacuum is unity, this does not fulfill the conditions of the Choi theorem, that there should be isolated systems ${\cal S}^{(II)}$ with arbitrary finite dimensionality on which the symmetry acts trivially.  
 
@@ -604,7 +631,7 @@ Here $H$ is a Hermitian matrix that can be identified with the Hamiltonian of or
 $L^{(\alpha)}$ are time-independent.  
 It may be assumed that the $L^{(\alpha)}$ are negligible at the scale of atoms or molecules, where ordinary quantum mechanics applies, but are large at macroscopic scales of mass or distance, as when (but not only when) measurements are made, so that the density matrix evolves very rapidly.  But to what?
 
-We will first consider the special case where the $L^{(\alpha)}$ are Hermitian matrices, and $H$ may be neglected.  This is the case encountered in several of the examples presented by Pearle[10], and it provides a helpful orientation for the more general problem.  The linear operator (5) in the Lindblad equation here takes the form:
+We will first consider the special case where the $L^{(\alpha)}$ are Hermitian matrices, and $H$ may be neglected.  This is the case encountered in several of the examples presented by Pearle [10], and it provides a helpful orientation for the more general problem.  The linear operator (5) in the Lindblad equation here takes the form:
 \begin{equation}
 {\cal L}f\equiv \sum_\alpha \Big[L^{(\alpha)}\,f\,L^{(\alpha)}
 -\frac{1}{2}{L^{(\alpha)}}^2\,f
@@ -663,8 +690,10 @@ In addition to this eigenvector, there are others that seem (though I have not b
 Now let us consider the perturbations to the zeroth order eigenvalues $\rho_0^{(ab)}$ with $a\neq b$.  For generic energies these are all non-degenerate, so the first-order perturbation to these eigenvalues are simply the matrix elements:
 \begin{eqnarray}
 &&\rho_1^{(ab)}=M_{ab,ab}\nonumber\\&&
-=\sum_\alpha \Bigg[[L^{(\alpha)}]_{aa}[L^{(\alpha)}]^*_{bb}-\frac{1}{2}[L^{(\alpha)\dagger}\,L^{(\alpha)}]_{bb}-\frac{1}{2}[L^{(\alpha)\dagger}\,L^{(\alpha)}]_{aa}\Bigg]\nonumber\\&&=\sum_\alpha \Bigg[[L^{(\alpha)}]_{aa}[L^{(\alpha)}]^*_{bb}-\frac{1}{2}|[L^{(\alpha)}]_{bb}|^2-\frac{1}{2}[|L^{(\alpha)}]_{aa}|^2-\frac{1}{2}\sum_{c\neq b}|[L^{(\alpha)}]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L^{(\alpha)}]_{ca}|^2\Bigg]\nonumber\\&&=
-\sum_\alpha \Bigg[i{\rm Im}([L^{(\alpha)}]_{aa}[L^{(\alpha)}]_{bb}^*)-\frac{1}{2}\Big|[L^{(\alpha)}]_{aa}-[L^{(\alpha)}]_{bb}\Big|^2\nonumber\\&&~~~~~~~~~~~~~~-\frac{1}{2}\sum_{c\neq b}|[L^{(\alpha)}]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L^{(\alpha)}]_{ca}|^2\Bigg]  \;.
+=\sum_\alpha \Bigg[[L^{(\alpha)}]_{aa}[L^{(\alpha)}]^*_{bb}-\frac{1}{2}[L^{(\alpha)\dagger}\,L^{(\alpha)}]_{bb}-\frac{1}{2}[L^{(\alpha)\dagger}\,L^{(\alpha)}]_{aa}\Bigg]\nonumber\\&&=
+\sum_\alpha \Bigg[[L^{(\alpha)}]_{aa}[L^{(\alpha)}]^*_{bb}-\frac{1}{2}|[L^{(\alpha)}]_{bb}|^2-\frac{1}{2}[|L^{(\alpha)}]_{aa}|^2-\frac{1}{2}\sum_{c\neq b}|[L^{(\alpha)}]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L^{(\alpha)}]_{ca}|^2\Bigg]\nonumber\\&&=
+\sum_\alpha \Bigg[i{\rm Im}([L^{(\alpha)}]_{aa}[L^{(\alpha)}]_{bb}^*)-\frac{1}{2}\Big|[L^{(\alpha)}]_{aa}-[L^{(\alpha)}]_{bb}\Big|^2\nonumber\\&&~~~~~~~~~~~~~~
+-\frac{1}{2}\sum_{c\neq b}|[L^{(\alpha)}]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L^{(\alpha)}]_{ca}|^2\Bigg]  \;.
 \end{eqnarray}
 We see that these eigenvalues all have negative real part.  The pure oscillation at frequency $E_a-E_b$ found in ordinary quantum mechanics is replaced here with an oscillation at a slightly shifted frequency that decays at a rate $-{\rm Re}\rho_1^{(ab)}$.  
 
