--- a/1603.06008/1603.06008.tex
+++ b/1603.06008/1603.06008.tex
@@ -1,7 +1,26 @@
-\documentstyle[11pt]{article}
+\documentclass[12pt]{article}
 \def\fnote#1#2{\begingroup\def\thefootnote{#1}\footnote{#2}\addtocounter
 {footnote}{-1}\endgroup}
 \def\BM#1{\mbox{\boldmath{$#1$}}}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
 
 \begin{document}
 
@@ -42,6 +61,7 @@ It is assumed that in a measurement the system  under study interacts with a mac
 \pagebreak
 
 
+\pdfbookmark{INTRODUCTION}{I}
 
 \begin{center}
 I. INTRODUCTION
@@ -61,14 +81,14 @@ p_\alpha=\langle\alpha|\rho_{\rm initial}|\alpha\rangle={\rm Tr}\Big(\Lambda_\al
 \end{equation}
 In a closed system in ordinary quantum mechanics the state vector evolves unitarily and deterministically, so as well known the collapse (1) cannot occur if the initial density matrix $\rho_{\rm initial}$ describes a pure state (or an ensemble of fewer pure states than the number of terms in $\rho_{\rm final}$).  In the original formulation[1] of the Copenhagen interpretation it was simply accepted that the change in a system during measurement in principle  departs from quantum mechanics.  We will instead adopt the popular modern  view that  the Copenhagen interpretation refers to open systems in which the transition (1) is driven by the interaction of the microscopic system under study with a suitable environment, a macroscopic external measuring apparatus (which may include an observer) chosen to bring this transition about.
 
-Of course, this view of the Copenhagen interpretation just pushes  the hard problems of interpreting quantum mechanics to a  larger scale.  We make no attempt to address these problems in the present paper, beyond noting the conjecture[2] that  the unitary evolution of microscopic systems is merely a very good approximation, while the density matrix of combined systems with macroscopic parts in general evolves rapidly  and non-unitarily, and in particular undergoes the collapse (1) during a measurement.   Although in this paper we are focusing on 
+Of course, this view of the Copenhagen interpretation just pushes  the hard problems of interpreting quantum mechanics to a  larger scale.  We make no attempt to address these problems in the present paper, beyond noting the conjecture [2] that  the unitary evolution of microscopic systems is merely a very good approximation, while the density matrix of combined systems with macroscopic parts in general evolves rapidly  and non-unitarily, and in particular undergoes the collapse (1) during a measurement.   Although in this paper we are focusing on 
 ordinary quantum mechanics in an open system,  most of our analysis applies equally to closed systems in modified versions of quantum mechanics.
 
 
 
 
 
-Whether in  open systems in ordinary quantum mechanics or in closed systems in some modified version of quantum mechanics,  in order to avoid instantaneous communication at a distance in entangled states, it is important to require that the density matrix at one time depends  on the density matrix at any earlier time, but not otherwise on  the state vector at the earlier time.[3].  This evolution can be linear but non-unitary in ordinary quantum mechanics if the system under study interacts with an environment that fluctuates randomly more rapidly than the rate at which the density matrix evolves (set by the interaction strength) if we average over these fluctuations.   We do not need to go into details regarding this interaction with the environment, because it is known that in the most general linear evolution that preserves the unit trace and Hermiticity of the density matrix and satisfies the condition of complete positivity[4], the density matrix satisfies the Lindblad equation[5]:
+Whether in  open systems in ordinary quantum mechanics or in closed systems in some modified version of quantum mechanics,  in order to avoid instantaneous communication at a distance in entangled states, it is important to require that the density matrix at one time depends  on the density matrix at any earlier time, but not otherwise on  the state vector at the earlier time [3].  This evolution can be linear but non-unitary in ordinary quantum mechanics if the system under study interacts with an environment that fluctuates randomly more rapidly than the rate at which the density matrix evolves (set by the interaction strength) if we average over these fluctuations.   We do not need to go into details regarding this interaction with the environment, because it is known that in the most general linear evolution that preserves the unit trace and Hermiticity of the density matrix and satisfies the condition of complete positivity[4], the density matrix satisfies the Lindblad equation [5]:
 \begin{equation}
 \frac{d\rho(t)}{dt}=-i\Big[{\cal H},\rho(t)\Big]+\sum_n \left(L_n\rho(t)L_n^\dagger-\frac{1}{2}L_n^\dagger L_n \rho(t)
 -\frac{1}{2}\rho(t) L_n^\dagger L_n\right)\;,
@@ -87,6 +107,7 @@ The answer to the first question is given in Section II, under the assumption th
 The second and third questions are answered in Section III, where we give a general solution of the Lindblad equation, under the conditions found in Section II.
 
 
+\pdfbookmark{NECESSARY CONDITIONS FOR A MEASUREMENT}{II}
 
 \begin{center}
 II. NECESSARY CONDITIONS FOR A MEASUREMENT
@@ -180,6 +201,7 @@ which vanishes for all initial density matrices if $\ell_{n\beta}=\ell_{n\gamma}
 This is reasonable, because for an incomplete measurement the Lindblad equation must not distinguish between different states in the same class,  We will see in the next section that in this case 
 the late-time limit of the density matrix does have the form (17).
 
+\pdfbookmark{COLLAPSE OF THE DENSITY MATRIX}{III}
 \begin{center}
 III. COLLAPSE OF THE DENSITY MATRIX
 \end{center}
@@ -443,8 +465,10 @@ In addition to this eigenvector, there are others that seem (though I have not b
 Now let us consider the perturbations to the zeroth order eigenvalues $\lambda_0^{(ab)}$ with $a\neq b$.  For generic energies these are all non-degenerate, so the first-order perturbation to these eigenvalues are simply the matrix elements:
 \begin{eqnarray}
 &&\lambda_1^{(ab)}=M_{ab,ab}\nonumber\\&&
-=\sum_\alpha \Bigg[[L_\alpha]_{aa}[L_\alpha]^*_{bb}-\frac{1}{2}[L_\alpha^\dagger\,L_\alpha]_{bb}-\frac{1}{2}[L_\alpha^\dagger\,L_\alpha]_{aa}\Bigg]\nonumber\\&&=\sum_\alpha \Bigg[[L_\alpha]_{aa}[L_\alpha]^*_{bb}-\frac{1}{2}|[L_\alpha]_{bb}|^2-\frac{1}{2}[|L_\alpha]_{aa}|^2-\frac{1}{2}\sum_{c\neq b}|[L_\alpha]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L_\alpha]_{ca}|^2\Bigg]\nonumber\\&&=
-\sum_\alpha \Bigg[i{\rm Im}([L_\alpha]_{aa}[L_\alpha]_{bb}^*)-\frac{1}{2}\Big|[L_\alpha]_{aa}-[L_\alpha]_{bb}\Big|^2\nonumber\\&&~~~~~~~~~~~~~~-\frac{1}{2}\sum_{c\neq b}|[L_\alpha]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L_\alpha]_{ca}|^2\Bigg]  \;.
+=\sum_\alpha \Bigg[[L_\alpha]_{aa}[L_\alpha]^*_{bb}-\frac{1}{2}[L_\alpha^\dagger\,L_\alpha]_{bb}-\frac{1}{2}[L_\alpha^\dagger\,L_\alpha]_{aa}\Bigg]\nonumber\\&&=
+\sum_\alpha \Bigg[[L_\alpha]_{aa}[L_\alpha]^*_{bb}-\frac{1}{2}|[L_\alpha]_{bb}|^2-\frac{1}{2}[|L_\alpha]_{aa}|^2-\frac{1}{2}\sum_{c\neq b}|[L_\alpha]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L_\alpha]_{ca}|^2\Bigg]\nonumber\\&&=
+\sum_\alpha \Bigg[i{\rm Im}([L_\alpha]_{aa}[L_\alpha]_{bb}^*)-\frac{1}{2}\Big|[L_\alpha]_{aa}-[L_\alpha]_{bb}\Big|^2\nonumber\\&&~~~~~~~~~~~~~~
+-\frac{1}{2}\sum_{c\neq b}|[L_\alpha]_{cb}|^2-\frac{1}{2}\sum_{c\neq a}|[L_\alpha]_{ca}|^2\Bigg]  \;.
 \end{eqnarray}
 We see that these eigenvalues all have negative real part.  The pure oscillation at frequency $E_a-E_b$ found in ordinary quantum mechanics is replaced here with an oscillation at a slightly shifted frequency that decays at a rate $-{\rm Re}\lambda_1^{(ab)}$.  
 
