--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-06 07:43:28 -0400 
+%% Created for Pete Su at 2019-07-06 08:22:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Pearle2012,
+	Abstract = {The Lindblad equation is an evolution equation for the density matrix in quantum theory. It is the general linear, Markovian, form which ensures that the density matrix is Hermitian, trace 1, positive and completely positive. Some elementary examples of the Lindblad equation are given. The derivation of the Lindblad equation presented here is `simple' in that all it uses is the expression of a Hermitian matrix in terms of its orthonormal eigenvectors and real eigenvalues. Thus, it is appropriate for students who have learned the algebra of quantum theory. Where helpful, arguments are first given in a two-dimensional Hilbert space.},
+	Author = {Philip Pearle},
+	Date-Added = {2019-07-06 08:22:01 -0400},
+	Date-Modified = {2019-07-06 08:22:45 -0400},
+	Doi = {10.1088/0143-0807/33/4/805},
+	Journal = {European Journal of Physics},
+	Month = {Apr},
+	Note = {\href{https://arxiv.org/abs/1204.2016}{arXiv:1204.2016}},
+	Number = {4},
+	Pages = {805--822},
+	Publisher = {{IOP} Publishing},
+	Title = {Simple derivation of the Lindblad equation},
+	Url = {https://doi.org/10.1088%2F0143-0807%2F33%2F4%2F805},
+	Volume = {33},
+	Year = 2012,
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0143-0807%2F33%2F4%2F805},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0143-0807/33/4/805}}
 
 @book{weinberg2013lectures,
 	Author = {Weinberg, S.},
