--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-06 08:22:46 -0400 
+%% Created for Pete Su at 2019-07-08 07:41:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Esfeld2014,
+	Author = {Esfeld, Michael and Hubert, Mario and Lazarovici, Dustin and D{\"u}rr, Detlef},
+	Date-Added = {2019-07-08 07:41:14 -0400},
+	Date-Modified = {2019-07-08 07:41:39 -0400},
+	Doi = {10.1093/bjps/axt019},
+	Eprint = {http://oup.prod.sis.lan/bjps/article-pdf/65/4/773/6860948/axt019.pdf},
+	Issn = {0007-0882},
+	Journal = {The British Journal for the Philosophy of Science},
+	Month = {09},
+	Number = {4},
+	Pages = {773-796},
+	Title = {{The Ontology of Bohmian Mechanics}},
+	Url = {https://doi.org/10.1093/bjps/axt019},
+	Volume = {65},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1093/bjps/axt019}}
+
+@article{Pearle1989,
+	Author = {Pearle, Philip},
+	Date-Added = {2019-07-06 13:34:55 -0400},
+	Date-Modified = {2019-07-06 13:35:08 -0400},
+	Doi = {10.1103/PhysRevA.39.2277},
+	Issue = {5},
+	Journal = {Phys. Rev. A},
+	Month = {Mar},
+	Numpages = {0},
+	Pages = {2277--2289},
+	Publisher = {American Physical Society},
+	Title = {Combining stochastic dynamical state-vector reduction with spontaneous localization},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.39.2277},
+	Volume = {39},
+	Year = {1989},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.39.2277},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.39.2277}}
 
 @article{Pearle2012,
 	Abstract = {The Lindblad equation is an evolution equation for the density matrix in quantum theory. It is the general linear, Markovian, form which ensures that the density matrix is Hermitian, trace 1, positive and completely positive. Some elementary examples of the Lindblad equation are given. The derivation of the Lindblad equation presented here is `simple' in that all it uses is the expression of a Hermitian matrix in terms of its orthonormal eigenvectors and real eigenvalues. Thus, it is appropriate for students who have learned the algebra of quantum theory. Where helpful, arguments are first given in a two-dimensional Hilbert space.},
