--- a/0802.1854/0802.1854.tex
+++ b/0802.1854/0802.1854.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.3in]{geometry}
+\tolerance=2000
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -633,7 +634,7 @@ physics). Today, entangled states are regarded as a resource to be
 employed in order to carry out tasks which cannot be done classically,
 \ie only with separable states --- cf. \cite{Hor,Key,WW}.
 
-     Another direct consequence of the Reeh--Schlieder Theorem is that
+Another direct consequence of the Reeh--Schlieder Theorem is that
 for all nonempty spacelike separated $\Os_1,\Os_2$ with nonempty 
 causal complements, no matter how far spacelike separated they may be, 
 there exist many projections $P_i \in \Rs(\Os_i)$ which are positively 
