--- a/0802.1854/0802.1854.tex
+++ b/0802.1854/0802.1854.tex
@@ -21,7 +21,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+%\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.3in]{geometry}
 \tolerance=2000
