clean up fonts and things

--- a/1904.04051/1904.04051.tex
+++ b/1904.04051/1904.04051.tex
@@ -169,7 +169,7 @@ bookmarksopenlevel=10
 \DeclareMathOperator{\Sol}{Sol}
 \begin{document}
 	%
-	\title{Algebraic Quantum Field Theory -- an introduction} 
+	\title{Algebraic Quantum Field Theory --\\ An Introduction} 
 	%\titlerunning{An analogue of the Coleman--Mandula theorem}
 	%\subtitle{Do you have a subtitle?\\ If so, write it here}
 	
@@ -189,8 +189,9 @@ bookmarksopenlevel=10
 	The text is supplemented by exercises and appendices that enlarge on some of the relevant mathematical background. These notes are based on lectures given by CJF for the International Max Planck Research School at the Albert Einstein Institute, Golm (October, 2018) and by KR at the Raman Research Institute, Bangalore (January, 2019). 
 	\end{abstract} 
 	% 
+	\newpage
 	\tableofcontents 
-	
+	\newpage
 	\section{Introduction}
 		
 	Algebraic Quantum Field Theory (AQFT) was one of two axiomatic programmes for QFT that emerged in the 1950s, in response to the problem of making QFT mathematically precise.
