--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -17,4 +17,4 @@ bookmarksopenlevel=10
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.3in]{geometry}
 \tolerance=2000
-
+\usepackage[small]{titlesec}
